kubernetes/environments/dev/ms-wallet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ms-wallet-ingress

  labels:
    app.kubernetes.io/name: ms-wallet
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: msimpl-platform
    app.kubernetes.io/environment: dev

spec:

  ingressClassName: nginx

  rules:

    - host: api.msimpl.local

      http:

        paths:

          - path: /wallet
            pathType: Prefix

            backend:

              service:

                name: ms-wallet

                port:
                  number: 8080
